* refactored player html output ** Less wrapping containers ** Cleaner building with jQuery constructors * improved default text display ( on play ) * fixed firefoggGUI display of loading msg * added credits display onClipDone for k_attribution
git-svn-id: file:///home/git-svn-mirror/pushmi-svn-mirror/branches/js2-work/phase3/js/mwEmbed@60439 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/skins/kskin/playerSkin.css
+++ b/skins/kskin/playerSkin.css
@@ -426,3 +426,9 @@
 	height : 12px;
 	cursor: pointer;
 }
+.k-player .itext a{
+	color: #bbf;
+}
+.k-player .itext a:visited{
+	color: #aaf;
+} 
