--- a/skins/mvpcf/styles.css
+++ b/skins/mvpcf/styles.css
@@ -547,3 +547,7 @@ ui-widget-overlay{
 .mw-imported-resource{
 	border: thin solid black;
 }
+
+.control_wrap{
+	position:relative;
+}
